--- a/.github/workflows/pre-commit-format-check.yml
+++ b/.github/workflows/pre-commit-format-check.yml
@@ -15,11 +15,8 @@ jobs:
       - name: Install uv
         run: pip install uv
 
-      - name: Install dependencies
+      - name: Install dependencies with uv
         run: uv sync --dev
 
-      - name: Install pre-commit
-        run: uv run pre-commit install
-
-      - name: Run pre-commit
+      - name: Run pre-commit check
         run: uv run pre-commit run --all-files
