--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,14 @@ dist/
 wheels/
 *.egg-info
 
+# Other cache files
+.pytest_cache
+.ruff_cache
+
 # Virtual environments
 .venv
 
+# Test coverage reports
 .coverage
+htmlcov
+coverage.xml
