--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,10 +58,12 @@ ignore = [
     "D105",    # Missing docstring in magic method
     "D106",    # Missing docstring in public nested class
     "D107",    # Missing docstring in `__init__`
+    "D202",    # No blank lines allowed after function docstring (found {num_lines})
     "D203",    # 1 blank line required before class docstring
     "D213",    # Multi-line docstring summary should start at the second line
     "D400",    # First line should end with a period
     "D401",    # First line of docstring should be in imperative mood: "{first_line}"
+    "D413",    # Missing blank line after last section ("{name}")
     "D415",    # First line should end with a period, question mark, or exclamation point
     "E501",    # Line too long ({width} > {limit})
     "F405",    # {name} may be undefined, or defined from star imports
