--- a/.github/workflows/pre-commit-format-check.yml
+++ b/.github/workflows/pre-commit-format-check.yml
@@ -2,7 +2,13 @@ name: Pre-Commit Format Check
 
 on:
   push:
+    paths:
+      - "**.py"
+      - "pyproject.toml"
   pull_request:
+    paths:
+      - "**.py"
+      - "pyproject.toml"
 
 jobs:
   lint:
@@ -12,11 +18,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install uv
-        run: pip install uv
-
-      - name: Install dependencies with uv
-        run: uv sync --dev
+      - name: Install dependencies
+        run: |
+          pip install uv
+          uv sync --dev
 
       - name: Run pre-commit check
         run: uv run pre-commit run --all-files
