--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,13 @@ jobs:
           pip install uv
           uv sync --dev
 
-      - name: Run tests
+      - name: Run tests and generate coverage report
         run: |
-          uv run pytest --cov=typescope --cov-fail-under=70
+          uv run pytest --cov=typescope --cov-fail-under=70 --cov-report=xml
+
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          fail_ci_if_error: true
