--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ select = [
     "W",   # pycodestyle warnings
 ]
 ignore = [
+    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
     "D100",    # Missing docstring in public module
     "D101",    # Missing docstring in public class
     "D102",    # Missing docstring in public method
