--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,19 @@
 [project]
 name = "typescope"
-version = "0.0.1"
+version = "0.0.2"
+authors = [{ name = "inaku-Gyan", email = "inaku.gs@gmail.com" }]
 description = "Runtime type-level assignability check for Python"
 keywords = ["runtime type checking", "subtyping"]
 readme = "README.md"
-license = { text = "MIT" }
-authors = [{ name = "inaku-Gyan", email = "inaku.gs@gmail.com" }]
-requires-python = ">=3.13"
-dependencies = []
+license = { file = "LICENSE" }
+classifiers = [
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent"
+]
+requires-python = ">=3.11"
 
 [project.urls]
 Homepage = "https://github.com/inaku-Gyan/typescope"
